schema/testdata/errors/set_attribute_rhs_is_invalid.keel
model Post {
    fields {
        name Text?
        published Boolean?
        identity Identity?
    }

    actions {
        create createPost1() {
            //expect-error:18:37:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.name == "Keel")
        }
        create createPost2() {
            //expect-error:25:26:AttributeExpressionError:operator '+' not supported in this context
            @set(post.name = "Keel" + "son")
        }
        create createPost3() {
            //expect-error:18:5:AttributeExpressionError:expression expected to resolve to type Text but it is Number
            @set(post.name = 123)
        }
        create createPost4() {
            //expect-error:18:29:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(post.name =)
        }
    }
}

model Publisher {
    fields {
        name Text
    }
}
